added and linked favicon.png

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Sai Sriyan" />
     <meta name="description" content="A Rock Paper Scissor modification." />
+    <link rel="shortcut icon" href="Images/favicon.png" type="image/png" />
     <title>Rock, Paper, Scissors, Knife</title>
     <style>
       .icon {
