replaced pngs for svgs

--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
       img {
         border: 3px solid hsl(0, 100%, 50%);
         border-radius: 0.5rem;
-      }
-      #knife {
         width: 10rem;
       }
       img:hover {
@@ -143,9 +141,9 @@
 
         <div id="gameContainer">
           <div id="images">
-            <img src="Images/rock.jpg" alt="Rock" id="rock" />
-            <img src="Images/paper.jpg" alt="paper" id="paper" />
-            <img src="Images/scissors.jpg" alt="scissors" id="scissors" />
+            <img src="Images/rock.svg" alt="Rock" id="rock" />
+            <img src="Images/paper.svg" alt="paper" id="paper" />
+            <img src="Images/scissors.svg" alt="scissors" id="scissors" />
             <img src="Images/knife.svg" alt="knife" id="knife" />
           </div>
           <button id="restartGameButton">Restart</button>
