--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
             <img src="Images/knife.svg" alt="knife" id="knife" />
           </div>
           <button id="restartGameButton">Restart</button>
+          <div id="results">
+            <p id="youChosePara">You chose <span id="youChoseSpan"></span></p>
+            <p id="botChosePara">You chose <span id="botChoseSpan"></span></p>
+            <p id="roundResults"></p>
+          </div>
           <div id="scores">
             <h2>Scores</h2>
             <p><b>You:</b> <span id="yourScore">0</span></p>
